create box news to list and show news

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,8 +1,17 @@
 body {
-    height: 100vh;
-    margin: 0;
-    background-color: white;
-  }
-  
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  height: 100vh;
+  margin: 0;
+  background-color: white;
+  padding-top: 80px;
+  min-width: 350px;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
