--- a/src/app/Components/main/main.component.css
+++ b/src/app/Components/main/main.component.css
@@ -8,5 +8,5 @@
   padding-top: 2px;
   padding-bottom: 2px;
   margin-left: 5px;
-  content: url(../assets/img/Plaam_logo.png);
+  content: url(/assets/img/Plaam_logo.png);
 }
