--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -1,10 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-
-
     <a class="navbar-brand">
-        <img src="/assets/img/Plaam_logo.png" alt="" height="36">
-      </a>
+      <img src="/assets/img/Plaam_logo.png" alt="" height="36" />
+    </a>
 
     <button
       class="navbar-toggler"
@@ -20,11 +18,12 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page">News</a>
+        <a class="nav-link active" aria-current="page" [routerLink]="['news']"
+          >News</a
+        >
         <a class="nav-link">Posts</a>
       </div>
     </div>
-
   </div>
 </nav>
 
