--- a/src/app/Components/news/news-component.component.html
+++ b/src/app/Components/news/news-component.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="listOfNews">
   <div class="row">
     <div class="col-xl-3 col-md-4 col-sm-6 col" *ngFor="let n of news">
       <box-news [news]="n"></box-news>
