--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand">
+    <a class="navbar-brand" [routerLink]="['/']">
       <img src="/assets/img/Plaam_logo.png" alt="" height="36" />
     </a>
 
     <button
+      (click)="showmenu = !showmenu"
       class="navbar-toggler"
       type="button"
       data-bs-toggle="collapse"
@@ -16,15 +17,31 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div
+      class="collapse navbar-collapse"
+      id="navbarNavAltMarkup"
+      [ngClass]="showmenu ? 'show' : ''"
+    >
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" [routerLink]="['news']"
+        <a
+          class="nav-link"
+          aria-current="page"
+          [routerLink]="['news']"
+          [routerLinkActive]="['active']"
           >News</a
         >
-        <a class="nav-link">Posts</a>
+        <a
+          class="nav-link"
+          aria-current="page"
+          [routerLink]="['posts']"
+          [routerLinkActive]="['active']"
+          >Posts</a
+        >
       </div>
     </div>
   </div>
 </nav>
 
-<router-outlet></router-outlet>
+<div class="container mainContainer">
+  <router-outlet></router-outlet>
+</div>
