--- a/src/app/Components/main/main.component.less
+++ b/src/app/Components/main/main.component.less
@@ -1,7 +1,3 @@
-.example-spacer {
-  flex: 1 1 auto;
-}
-
 .logo {
   width: 135px;
   height: 40px;
@@ -9,4 +5,16 @@
   padding-bottom: 2px;
   margin-left: 5px;
   content: url(/assets/img/Plaam_logo.png);
+}
+
+.nav-link {
+  font-size: 1.5em;
+}
+
+.collapse.navbar-collapse.show {
+  text-align: center;
+}
+
+.mainContainer {
+  padding-top: 90px;
 }
