--- a/src/styles.less
+++ b/src/styles.less
@@ -2,7 +2,7 @@ body {
   height: 100vh;
   margin: 0;
   background-color: white;
-  min-width: 400px;
+  // min-width: 300px;
 }
 
 html,
@@ -13,4 +13,10 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.spinnerBigSize {
+  margin-top: 40px;
+  width: 6rem;
+  height: 6rem;
 }
