--- a/src/app/Components/posts/create-comment/create-comment.component.less
+++ b/src/app/Components/posts/create-comment/create-comment.component.less
@@ -1,21 +1,23 @@
-.title {
-  font-size: 2.75rem;
-  line-height: 3.75rem;
-  letter-spacing: 0;
+.createNewComment {
+  .title {
+    font-size: 2.75rem;
+    line-height: 3.75rem;
+    letter-spacing: 0;
 
-  margin-top: 20px;
-}
+    margin-top: 20px;
+  }
 
-mat-form-field {
-  width: 100%;
-  font-size: 1.25em;
-
-  margin-top: 30px;
-}
-
-.rowBtnCreate {
-  text-align: right;
-  button {
+  mat-form-field {
+    width: 100%;
     font-size: 1.25em;
+
+    margin-top: 30px;
+  }
+
+  .rowBtnCreate {
+    text-align: right;
+    button {
+      font-size: 1.25em;
+    }
   }
 }
