--- a/src/app/Components/posts/show-post/show-post.component.html
+++ b/src/app/Components/posts/show-post/show-post.component.html
@@ -1,47 +1,65 @@
-<div class="showPost">
-  <h1 class="titleShow">{{ post.title }}</h1>
-
-  <h4 class="dateShow">
-    {{ post.publishedDate | date : "dd/MM/yyyy hh:mm" }}
-    <span *ngIf="post.author">by {{ post.author.email }}</span>
-  </h4>
-
-  <div [innerHTML]="post.text" class="contentShow"></div>
-
-  <div class="row">
-    <div class="col">
-      <h2 class="commentsTitle">Comentarios:</h2>
-    </div>
-    <div class="col-2">
-      <div class="rowBtnComment">
-        <button mat-raised-button color="accent" (click)="createComment(post)">
-          New comment
-        </button>
+<div class="row" *ngIf="isLoading">
+  <div class="col">
+    <div class="d-flex justify-content-center">
+      <div class="spinner-border spinnerBigSize text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
       </div>
     </div>
   </div>
+</div>
 
-  <div
-    class="commentsOfPost"
-    [matBadge]="post.comments?.length"
-    matBadgePosition="before"
-    matBadgeColor="primary"
-    matBadgeSize="large"
-  >
-    <p class="notComments" *ngIf="!(post.comments && post.comments.length > 0)">
-      There are currently no comments for this post
-    </p>
+<div class="row" *ngIf="!isLoading">
+  <div class="col">
+    <div class="showPost">
+      <h1 class="titleShow">{{ post.title }}</h1>
 
-    <div class="commentMessage" *ngFor="let comment of post.comments">
-      <mat-card class="cardComment">
-        <mat-card-content>
-          <p class="dateComment">
-            {{ comment.createdDate | date : "dd/MM/yyyy hh:mm" }}
-            <span *ngIf="post.author">by {{ post.author.email }}</span>
-          </p>
-          <p class="msgComment">{{ comment.message }}</p>
-        </mat-card-content>
-      </mat-card>
+      <h4 class="dateShow">
+        {{ post.publishedDate | date : "dd/MM/yyyy hh:mm" }}
+        <span *ngIf="post.author">by {{ post.author.email }}</span>
+      </h4>
+
+      <div [innerHTML]="post.text" class="contentShow"></div>
+
+      <div class="row">
+        <div class="col-md-6 col-lg-8 col-xs-12">
+          <h2 class="commentsHeader">Comentarios:</h2>
+        </div>
+
+        <div class="col-md-6 col-lg-4 col-xs-12 btnAddComment">
+          <button
+            mat-raised-button
+            color="accent"
+            (click)="createComment(post)"
+          >
+            New comment
+          </button>
+        </div>
+      </div>
+
+      <div
+        class="commentsOfPost"
+        [matBadge]="post.comments?.length"
+        matBadgePosition="before"
+        matBadgeColor="primary"
+        matBadgeSize="large"
+      >
+        <p
+          class="notComments"
+          *ngIf="!(post.comments && post.comments.length > 0)"
+        >
+          There are currently no comments for this post
+        </p>
+
+        <mat-card class="cardComment" *ngFor="let comment of post.comments">
+          <mat-card-content>
+            <p class="dateComment">
+              {{ comment.createdDate | date : "dd/MM/yyyy hh:mm" }}
+              <span *ngIf="post.author">by {{ comment.author.email }}</span>
+            </p>
+            <p class="msgComment">{{ comment.message }}</p>
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
   </div>
 </div>
