--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -2,7 +2,9 @@
   <div class="boxLogin">
     <form (ngSubmit)="login()" class="login-form">
       <div class="form-group boxImgLogin">
-        <img class="login-logo" />
+        <a [routerLink]="['']">
+          <img class="login-logo" />
+        </a>
       </div>
 
       <div class="form-group has-feedback has-feedback-left">
