--- a/src/app/Components/main/main.component.html
+++ b/src/app/Components/main/main.component.html
@@ -39,6 +39,15 @@
           (click)="showmenu = false"
           >Posts</a
         >
+        <a
+          class="nav-link"
+          aria-current="page"
+          [routerLink]="['form','family']"
+          [routerLinkActive]="['active']"
+          (click)="showmenu = false"
+          *ngIf="user.id > 0" 
+          >Form family</a
+        >
       </div>
 
       <div class="navbar-nav ms-auto">
