--- a/src/app/Auth/login/login.component.html
+++ b/src/app/Auth/login/login.component.html
@@ -14,7 +14,7 @@
           #username="ngModel"
           type="text"
           class="form-control"
-          placeholder="Username"
+          placeholder="Email"
           name="username"
           required="required"
           aria-required="true"
@@ -24,7 +24,7 @@
           for="username"
           class="validation-error-label"
         >
-          Username is required
+          Email is required
         </div>
       </div>
 
